# picture_estimate_ai

./: README.md  docker-compose.yaml
backend/: .dockerignore  .gitignore  Dockerfile  fly.toml  pyproject.toml
backend/api/: main.py
frontend/: .env.production  Dockerfile  fly.toml  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/constants/: ApiConstants.ts
frontend/src/services/: GetEnvService.ts  GetHelloWorldService.ts
